test-data/elab/unification/escaping-local.snapshot
exit status: 0

stdout = """
(fun(n : ?1) => #error) : forall(_ : ?1) -> ?3(#var(DeBruijnIndex(0)))

"""

stderr = """
error: Type mismatch: expected `?3(n)`, found `?1`
  ┌─ test-data/elab/unification/escaping-local.pion:1:19
  │
1 │ #check (fun(n) => n) : _ -> _;
  │                   ^
  │
  = help: could not unify types because escaping local variable (`n`) appeared in problem spine

error: Could not infer expression to solve hole
  ┌─ test-data/elab/unification/escaping-local.pion:1:24
  │
1 │ #check (fun(n) => n) : _ -> _;
  │                        ^

error: Could not infer expression to solve hole
  ┌─ test-data/elab/unification/escaping-local.pion:1:29
  │
1 │ #check (fun(n) => n) : _ -> _;
  │                             ^


"""
